kubernetes/apps/calibre/app/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app calibre
  labels:
    app.kubernetes.io/name: *app
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      # requires root(??)
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: false
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: ghcr.io/crocodilestick/calibre-web-automated:v4.0.6@sha256:c31a738b6d5ec6982c050063dd3f063b6943eb1051fc81144789f840d9093a8d
          name: calibre-web-automated
          ports:
            - containerPort: 8083
              name: http
          livenessProbe: &probes
            httpGet:
              path: /login
              port: 8083
            failureThreshold: 5
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe: *probes
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              memory: 2Gi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: ingest
              mountPath: /cwa-book-ingest
            - name: calibre
              subPath: config
              mountPath: /config
            - name: calibre
              subPath: library
              mountPath: /calibre-library
            - name: scratch
              mountPath: /tmp
      volumes:
        - name: *app
          persistentVolumeClaim:
            claimName: *app
        - name: ingest
          emptyDir: {}
        - name: scratch
          emptyDir: {}
