kubernetes/apps/calibre/app/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app calibre
  labels:
    app.kubernetes.io/name: *app
spec:
  selector:
    app.kubernetes.io/name: *app
  ports:
    - name: calibre-web-automated
      port: 8083
      targetPort: 8083
